added all llama ratings with llama3

--- a/collating_llm_responses.ipynb
+++ b/collating_llm_responses.ipynb
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        "      <th>conversation_id</th>\n",
        "      <th>proc_text</th>\n",
        "      <th>gpt4o_responses</th>\n",
-       "      <th>gpt4_int</th>\n",
+       "      <th>gpt4o_int</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1686,31 +1686,50 @@
        "6654  teacher: yes, absolutely!  student: 13:59 on m...   \n",
        "6655  teacher: loan is more formal! right, thank you...   \n",
        "\n",
-       "                                        gpt4o_responses  gpt4_int  \n",
-       "0     {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...         1  \n",
-       "1     {\\n  \"INT\": 2,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...         2  \n",
-       "2     {\\n  \"INT\": 3,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...         3  \n",
-       "3     {\\n  \"INT\": 4,\\n  \"EXP_INT\": 4,\\n  \"REASON\": \"...         4  \n",
-       "4     {\\n  \"INT\": 2,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...         2  \n",
-       "...                                                 ...       ...  \n",
-       "6651  {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...         1  \n",
-       "6652  {\\n  \"INT\": 3,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...         3  \n",
-       "6653  {\\n  \"INT\": 2,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...         2  \n",
-       "6654  {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...         1  \n",
-       "6655  {\\n  \"INT\": 3,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...         3  \n",
+       "                                        gpt4o_responses  gpt4o_int  \n",
+       "0     {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...          1  \n",
+       "1     {\\n  \"INT\": 2,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...          2  \n",
+       "2     {\\n  \"INT\": 3,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...          3  \n",
+       "3     {\\n  \"INT\": 4,\\n  \"EXP_INT\": 4,\\n  \"REASON\": \"...          4  \n",
+       "4     {\\n  \"INT\": 2,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...          2  \n",
+       "...                                                 ...        ...  \n",
+       "6651  {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...          1  \n",
+       "6652  {\\n  \"INT\": 3,\\n  \"EXP_INT\": 3,\\n  \"REASON\": \"...          3  \n",
+       "6653  {\\n  \"INT\": 2,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...          2  \n",
+       "6654  {\\n  \"INT\": 1,\\n  \"EXP_INT\": 1,\\n  \"REASON\": \"...          1  \n",
+       "6655  {\\n  \"INT\": 3,\\n  \"EXP_INT\": 2,\\n  \"REASON\": \"...          3  \n",
        "\n",
        "[6656 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gpt4o_ratings = pd.read_excel(\"llm_responses/gpt4o_ratings.xlsx\")\n",
-    "gpt4o_ratings['gpt4_int'] = gpt4o_ratings['gpt4o_responses'].apply(get_int_gpt4o)\n",
+    "gpt4o_ratings['gpt4o_int'] = gpt4o_ratings['gpt4o_responses'].apply(get_int_gpt4o)\n",
     "gpt4o_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_gpt4_ratings = gpt4_ratings[['id','conversation_id','proc_text', 'gpt4_int']].merge(gpt4o_ratings[['id','conversation_id','proc_text', 'gpt4o_int']],\n",
+    "                                                                     on=['id','conversation_id','proc_text'], how='left')\n",
+    "all_gpt4_ratings.to_excel('data/all_gpt4_ratings.xlsx', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LLAMA"
    ]
   },
   {
@@ -2159,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2334,7 @@
        "[6656 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,6 +2342,252 @@
    "source": [
     "llama_8bnonchat = pd.read_json('llm_responses/llama3_nonchat8b_newprompt.json')\n",
     "llama_8bnonchat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6637"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llama_8bnonchat['text'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59738</td>\n",
+       "      <td>student: good afternoon &lt;teacher&gt;    student: ...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 3; EXP_INT: 4; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59739</td>\n",
+       "      <td>teacher: hi &lt;student&gt; - how are you?  student:...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 4; EXP_INT: 3; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59740</td>\n",
+       "      <td>teacher: yes i guess you must be used to it by...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 3; EXP_INT: 3; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59741</td>\n",
+       "      <td>teacher: right i see...yes i'd really like to ...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 1; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59742</td>\n",
+       "      <td>teacher: yes,,you'll look back on it with nost...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 0; EXP_INT: 0; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3869</th>\n",
+       "      <td>65706</td>\n",
+       "      <td>teacher: yes, historical is about history as a...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 2; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3870</th>\n",
+       "      <td>65707</td>\n",
+       "      <td>teacher: if we say a city is historic, a lot o...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 1; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3871</th>\n",
+       "      <td>65708</td>\n",
+       "      <td>teacher: yes, absolutely! is your hometown his...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 1; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3872</th>\n",
+       "      <td>65709</td>\n",
+       "      <td>teacher: i see! ok, lovely, i'll let you go no...</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 1; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3873</th>\n",
+       "      <td>65710</td>\n",
+       "      <td>teacher: bye!  student: bye!</td>\n",
+       "      <td>You are an AI evaluator rating how interesting...</td>\n",
+       "      <td>INT: 1; EXP_INT: 1; REASON: The student's resp...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3874 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id                                               text  \\\n",
+       "0     59738  student: good afternoon <teacher>    student: ...   \n",
+       "1     59739  teacher: hi <student> - how are you?  student:...   \n",
+       "2     59740  teacher: yes i guess you must be used to it by...   \n",
+       "3     59741  teacher: right i see...yes i'd really like to ...   \n",
+       "4     59742  teacher: yes,,you'll look back on it with nost...   \n",
+       "...     ...                                                ...   \n",
+       "3869  65706  teacher: yes, historical is about history as a...   \n",
+       "3870  65707  teacher: if we say a city is historic, a lot o...   \n",
+       "3871  65708  teacher: yes, absolutely! is your hometown his...   \n",
+       "3872  65709  teacher: i see! ok, lovely, i'll let you go no...   \n",
+       "3873  65710                       teacher: bye!  student: bye!   \n",
+       "\n",
+       "                                                 prompt  \\\n",
+       "0     You are an AI evaluator rating how interesting...   \n",
+       "1     You are an AI evaluator rating how interesting...   \n",
+       "2     You are an AI evaluator rating how interesting...   \n",
+       "3     You are an AI evaluator rating how interesting...   \n",
+       "4     You are an AI evaluator rating how interesting...   \n",
+       "...                                                 ...   \n",
+       "3869  You are an AI evaluator rating how interesting...   \n",
+       "3870  You are an AI evaluator rating how interesting...   \n",
+       "3871  You are an AI evaluator rating how interesting...   \n",
+       "3872  You are an AI evaluator rating how interesting...   \n",
+       "3873  You are an AI evaluator rating how interesting...   \n",
+       "\n",
+       "                                               response  \n",
+       "0     INT: 3; EXP_INT: 4; REASON: The student's resp...  \n",
+       "1     INT: 4; EXP_INT: 3; REASON: The student's resp...  \n",
+       "2     INT: 3; EXP_INT: 3; REASON: The student's resp...  \n",
+       "3     INT: 1; EXP_INT: 1; REASON: The student's resp...  \n",
+       "4     INT: 0; EXP_INT: 0; REASON: The student's resp...  \n",
+       "...                                                 ...  \n",
+       "3869  INT: 1; EXP_INT: 2; REASON: The student's resp...  \n",
+       "3870  INT: 1; EXP_INT: 1; REASON: The student's resp...  \n",
+       "3871  INT: 1; EXP_INT: 1; REASON: The student's resp...  \n",
+       "3872  INT: 1; EXP_INT: 1; REASON: The student's resp...  \n",
+       "3873  INT: 1; EXP_INT: 1; REASON: The student's resp...  \n",
+       "\n",
+       "[3874 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llama_8bnonchat1 = pd.read_json('llm_responses/llama3_chat8b_responses_2.json')\n",
+    "llama_8bnonchat1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MISTRAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mistral_7b = pd.read_excel('/Users/mahathi/Dissertation/total_ratings/mistral7b_complete.xlsx')\n",
+    "## need to add missing values\n",
+    "mistral_7b_missing = pd.read_json(\"/Users/mahathi/Downloads/mistral7b_ins_score_list_final.json\")\n",
+    "\n",
+    "with open(\"/Users/mahathi/Dissertation/total_ratings/mix7x8_1000.pkl\", 'rb') as f:\n",
+    "    mixtral_1 = pickle.load(f)\n",
+    "\n",
+    "with open(\"/Users/mahathi/Dissertation/total_ratings/mixtral_all1.pkl\", 'rb') as f:\n",
+    "    mixtral_2 = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mistral_7b = mistral_7b[mistral_7b['id'].isin(human_ratings_df['id'].unique())]\n",
+    "mistral_7b = mistral_7b.rename(columns={'proc_text':'text'})\n",
+    "missing_conv_data_mis = pd.read_excel(\"/Users/mahathi/Downloads/missing_conv_data_toadd.xlsx\")\n",
+    "\n",
+    "missing_conv_data_mis['mis7_int'] = mistral_7b_missing[0]\n",
+    "missing_conv_data_mis = missing_conv_data_mis[missing_conv_data_mis['id'].isin(human_ratings_df['id'].unique())]\n",
+    "missing_conv_data_mis\n",
+    "complete_mis_ins = pd.concat([mistral_7b[['text','id','conversation_id','mis7_int']], missing_conv_data_mis], ignore_index=True)\n",
+    "mistral_nonchat = pd.read_json('/Users/mahathi/Downloads/mistral7b_score_list_final.json')\n",
+    "mistral_data = pd.read_excel('/Users/mahathi/Dissertation/LLM_Analysis/FINAL_new_prompts.xlsx')\n",
+    "mistral_data['id'] = mistral_data['id'].apply(int)\n",
+    "mistral_data['conversation_id'] = mistral_data['conversation_id'].apply(int)\n",
+    "mistral_data['mis_nonchat_int'] = mistral_nonchat[0]\n",
+    "mistral_data['mixtral'] = mixtral_1 + mixtral_2\n",
+    "mistral_data['mix_int'] = mistral_data['mixtral'].apply(find_int_llama)\n",
+    "mistral_data_final = mistral_data.merge(complete_mis_ins, on=['conversation_id', 'id'], how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mistral_data_final[['id', 'conversation_id', 'proc_text', 'mis_nonchat_int', 'mix_int', 'mis7_int']].sort_values(['conversation_id', 'id']).to_excel('data/all_mistral_ratings.xlsx', index=False)"
    ]
   },
   {
