adding prompt for re-writes

--- a/tscc_data_preprocess.ipynb
+++ b/tscc_data_preprocess.ipynb
@@ -905,37 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'.DS_Store',\n",
-       " 'Project 0 sp1 part 1 no comp',\n",
-       " 'Project 0 sp1 part 2 no comp',\n",
-       " 'Project 1 sp1 part 1 no comp',\n",
-       " 'Project 1 sp1 part 2 no comp',\n",
-       " 'Project 3 sp1 part 1 no comp',\n",
-       " 'Project 3 sp1 part 2 no comp',\n",
-       " 'Project 4 sp1 p2 i',\n",
-       " 'Project 4 sp1 part1',\n",
-       " 'project 4 sp1 part1 no comp',\n",
-       " 'project 4 sp1 part2 no comp'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(tot_projs) - set(projs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,10 +981,298 @@
     "        return parts[0].strip('\\n').strip('\\n\\n')\n",
     "    else:\n",
     "        return conv_string\n",
+    "    \n",
+    "\n",
+    "def get_rewritten_conv(conv_string):\n",
+    "    alternative_interesting = \"================= Is the following alternative response more interesting\\? =================\"\n",
+    "\n",
+    "    # For the Alternative re-write conversations\n",
+    "    if re.search(alternative_interesting, conv_string, flags=re.IGNORECASE) :\n",
+    "        parts = re.split(alternative_interesting, conv_string)          \n",
+    "        return parts[1].strip('\\n').strip('\\n\\n')\n",
+    "    else:\n",
+    "        return -1\n",
     "\n",
     "total_annotated_data = total_annotated_data[total_annotated_data['conversation_id']!='None']\n",
     "total_annotated_data['human_int'] = total_annotated_data['label'].apply(get_int_val).astype(int)\n",
     "total_annotated_data['conversation_id'] = total_annotated_data['conversation_id'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>conversation_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>participant</th>\n",
+       "      <th>level</th>\n",
+       "      <th>label</th>\n",
+       "      <th>human_int</th>\n",
+       "      <th>text0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>36289</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>6101885b0f3e7fdafc8fd5d1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[EXP INT 0, INT 0]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STUDENT:\\n    Sorry, it's my name as usual )\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36290</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>6101885b0f3e7fdafc8fd5d1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[EXP INT 1, INT 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>STUDENT:\\n    Fine, but quite (razbitaya) )\\n=...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36291</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>6101885b0f3e7fdafc8fd5d1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[EXP INT 3, INT 3]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>STUDENT:\\n    I don't know if it's the weather...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36292</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>6101885b0f3e7fdafc8fd5d1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[EXP INT 1, INT 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>STUDENT:\\n    I mean I'm OK, but I fell not 10...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36293</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>6101885b0f3e7fdafc8fd5d1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[EXP INT 2, INT 2]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>STUDENT:\\n    I see! It's so hard to be at hom...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20471</th>\n",
+       "      <td>65706</td>\n",
+       "      <td>166</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>60317fc2c8f6320ecde4bcb3</td>\n",
+       "      <td>[C1]</td>\n",
+       "      <td>[EXP INT 2, INT 1, The alternative is worse]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TEACHER:\\n    Yes, historical is about history...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20472</th>\n",
+       "      <td>65707</td>\n",
+       "      <td>166</td>\n",
+       "      <td>STUDENT: Yes, the important means of the city ...</td>\n",
+       "      <td>60317fc2c8f6320ecde4bcb3</td>\n",
+       "      <td>[C1]</td>\n",
+       "      <td>[EXP INT 2, INT 2, The alternative is better]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>TEACHER:\\n    If we say a city is historic, a ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20473</th>\n",
+       "      <td>65708</td>\n",
+       "      <td>166</td>\n",
+       "      <td>STUDENT: I think I comprehend the distinction....</td>\n",
+       "      <td>60317fc2c8f6320ecde4bcb3</td>\n",
+       "      <td>[C1]</td>\n",
+       "      <td>[EXP INT 2, INT 2, The alternative is better]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>TEACHER:\\n    Yes, absolutely!\\n    Is your ho...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20474</th>\n",
+       "      <td>65709</td>\n",
+       "      <td>166</td>\n",
+       "      <td>STUDENT: OK. Thank you. I will see you on Thur...</td>\n",
+       "      <td>60317fc2c8f6320ecde4bcb3</td>\n",
+       "      <td>[C1]</td>\n",
+       "      <td>[EXP INT 2, INT 2, The alternative is better]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>TEACHER:\\n    I see!\\n    Ok, lovely, I'll let...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20475</th>\n",
+       "      <td>65710</td>\n",
+       "      <td>166</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>60317fc2c8f6320ecde4bcb3</td>\n",
+       "      <td>[C1]</td>\n",
+       "      <td>[EXP INT 3, INT 3, The alternative is worse]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>TEACHER:\\n    Bye!\\n========Rate if this teach...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19968 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  conversation_id  \\\n",
+       "0      36289              212   \n",
+       "1      36290              212   \n",
+       "2      36291              212   \n",
+       "3      36292              212   \n",
+       "4      36293              212   \n",
+       "...      ...              ...   \n",
+       "20471  65706              166   \n",
+       "20472  65707              166   \n",
+       "20473  65708              166   \n",
+       "20474  65709              166   \n",
+       "20475  65710              166   \n",
+       "\n",
+       "                                                    text  \\\n",
+       "0                                                     -1   \n",
+       "1                                                     -1   \n",
+       "2                                                     -1   \n",
+       "3                                                     -1   \n",
+       "4                                                     -1   \n",
+       "...                                                  ...   \n",
+       "20471                                                 -1   \n",
+       "20472  STUDENT: Yes, the important means of the city ...   \n",
+       "20473  STUDENT: I think I comprehend the distinction....   \n",
+       "20474  STUDENT: OK. Thank you. I will see you on Thur...   \n",
+       "20475                                                 -1   \n",
+       "\n",
+       "                    participant level  \\\n",
+       "0      6101885b0f3e7fdafc8fd5d1    []   \n",
+       "1      6101885b0f3e7fdafc8fd5d1    []   \n",
+       "2      6101885b0f3e7fdafc8fd5d1    []   \n",
+       "3      6101885b0f3e7fdafc8fd5d1    []   \n",
+       "4      6101885b0f3e7fdafc8fd5d1    []   \n",
+       "...                         ...   ...   \n",
+       "20471  60317fc2c8f6320ecde4bcb3  [C1]   \n",
+       "20472  60317fc2c8f6320ecde4bcb3  [C1]   \n",
+       "20473  60317fc2c8f6320ecde4bcb3  [C1]   \n",
+       "20474  60317fc2c8f6320ecde4bcb3  [C1]   \n",
+       "20475  60317fc2c8f6320ecde4bcb3  [C1]   \n",
+       "\n",
+       "                                               label  human_int  \\\n",
+       "0                                 [EXP INT 0, INT 0]          0   \n",
+       "1                                 [EXP INT 1, INT 1]          1   \n",
+       "2                                 [EXP INT 3, INT 3]          3   \n",
+       "3                                 [EXP INT 1, INT 1]          1   \n",
+       "4                                 [EXP INT 2, INT 2]          2   \n",
+       "...                                              ...        ...   \n",
+       "20471   [EXP INT 2, INT 1, The alternative is worse]          1   \n",
+       "20472  [EXP INT 2, INT 2, The alternative is better]          2   \n",
+       "20473  [EXP INT 2, INT 2, The alternative is better]          2   \n",
+       "20474  [EXP INT 2, INT 2, The alternative is better]          2   \n",
+       "20475   [EXP INT 3, INT 3, The alternative is worse]          3   \n",
+       "\n",
+       "                                                   text0  \n",
+       "0      STUDENT:\\n    Sorry, it's my name as usual )\\n...  \n",
+       "1      STUDENT:\\n    Fine, but quite (razbitaya) )\\n=...  \n",
+       "2      STUDENT:\\n    I don't know if it's the weather...  \n",
+       "3      STUDENT:\\n    I mean I'm OK, but I fell not 10...  \n",
+       "4      STUDENT:\\n    I see! It's so hard to be at hom...  \n",
+       "...                                                  ...  \n",
+       "20471  TEACHER:\\n    Yes, historical is about history...  \n",
+       "20472  TEACHER:\\n    If we say a city is historic, a ...  \n",
+       "20473  TEACHER:\\n    Yes, absolutely!\\n    Is your ho...  \n",
+       "20474  TEACHER:\\n    I see!\\n    Ok, lovely, I'll let...  \n",
+       "20475  TEACHER:\\n    Bye!\\n========Rate if this teach...  \n",
+       "\n",
+       "[19968 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extracting only the rewritten conversations\n",
+    "total_annotated_data_copy = total_annotated_data.copy()\n",
+    "total_annotated_data_copy = total_annotated_data_copy[['id', 'conversation_id', 'text', 'participant','level','label','human_int']]\n",
+    "total_annotated_data_copy['text0'] = total_annotated_data_copy['text']\n",
+    "total_annotated_data_copy['text'] = total_annotated_data_copy.apply(lambda x: pre_process(x.text, x.label), axis=1)\n",
+    "\n",
+    "total_annotated_data_copy['text'] = total_annotated_data_copy['text'].apply(lambda x: get_rewritten_conv(x))\n",
+    "total_annotated_data_copy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_annotated_data_copy[total_annotated_data_copy['text']!=-1].to_excel(\"data/rewritten_conversations.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_annotated_data['conversation_id'].nunique()"
    ]
   },
   {
@@ -1264,6 +1522,13 @@
     "total_annotated_data = total_annotated_data.drop(columns=['level'])\n",
     "total_annotated_data\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2151,6 +2416,57 @@
     "\n",
     "merged['seq.type'] = merged['seq.type'].apply(process_seqtype)\n",
     "merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "annotator_level\n",
+       "C1         36\n",
+       "B2         23\n",
+       "Unknown    21\n",
+       "C2         13\n",
+       "A2          3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.drop_duplicates(subset=['participant'])['annotator_level'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "student.cefr.level\n",
+       "B2    63\n",
+       "C2    27\n",
+       "B1     3\n",
+       "C1     3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.drop_duplicates(subset=['participant'])['student.cefr.level'].value_counts()"
    ]
   },
   {
