--- a/interest_sup_FINAL_CogSci.Rmd
+++ b/interest_sup_FINAL_CogSci.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r, code = readLines("interest_main.R"), include=FALSE}
+```{r, code = readLines("interest_main_FINAL_CogSci.R"), include=FALSE}
 ```
 
 This file contains the Supplementary Materials for XXX (2025). What makes a conversation interesting? Linguistic features predictive of interest in educational conversations between teachers and learners of English
